// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly creates default environment if \`--env.name\` is supplied.: dev env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "dev": true,
    "envName": "development",
    "open": false,
    "optimize": false,
    "oss": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "isDevClusterMaster": false,
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
}
`;

exports[`correctly creates default environment if \`--env.name\` is supplied.: prod env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "dev": false,
    "envName": "production",
    "open": false,
    "optimize": false,
    "oss": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "isDevClusterMaster": false,
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
}
`;

exports[`correctly creates default environment in dev mode.: env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "dev": true,
    "open": false,
    "optimize": false,
    "oss": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/test/cwd/config/kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "isDevClusterMaster": true,
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "some-branch",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "some-version",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
}
`;

exports[`correctly creates default environment in prod distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "dev": false,
    "open": false,
    "optimize": false,
    "oss": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "isDevClusterMaster": false,
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "dist": true,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
}
`;

exports[`correctly creates default environment in prod non-distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "dev": false,
    "open": false,
    "optimize": false,
    "oss": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "isDevClusterMaster": false,
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
}
`;

exports[`correctly creates environment with constructor.: env properties 1`] = `
Env {
  "binDir": "/some/home/dir/bin",
  "cliArgs": Object {
    "basePath": false,
    "dev": false,
    "open": false,
    "optimize": false,
    "oss": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/some/home/dir/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/some/home/dir",
  "isDevClusterMaster": false,
  "logDir": "/some/home/dir/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "dist": true,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/some/home/dir/src/plugins",
    "/some/home/dir/x-pack/plugins",
    "/some/home/dir/plugins",
    "/some/home/dir/../kibana-extra",
  ],
}
`;
